footer abt link, baseurl change-hugo.toml

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://espeople.netlify.app/"
+baseURL = "https://espeople.co.in/"
 languageCode = "en-us"
 title = "ESP | Energize, Synergize, People - Unlock Your Business Potential"
 theme = 'growth-sketch'
